left1 and left 2 lines

--- a/index.html
+++ b/index.html
@@ -74,7 +74,36 @@
             </div>
           </div>
         </div>
-        <div class="col"></div>
+        <div class="col">
+          <div class="box left-2">
+            <p class="title">Segunda Ronda</p>
+            <div class="fando-card top-1">
+              <div class="fando-card-header">Cuartos de Final 1</div>
+              <div class="fando-card-body">
+                <div class="team type-1">
+                  <div class="team-color red"></div>
+                  <p class="team-name">POOL A (winner)</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color blue"></div>
+                  <p class="team-name">POOL A (runner up)</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color yellow"></div>
+                  <p class="team-name">POOL B (winner)</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color green"></div>
+                  <p class="team-name">POOL B (runner up)</p>
+                </div>
+              </div>
+              <div class="fando-card-footer">
+                Miami, Florida
+                <b>Septiembre 00 - 00</b>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col"></div>
         <div class="col"></div>
         <div class="col">
