--- a/index.html
+++ b/index.html
@@ -104,12 +104,77 @@
             </div>
           </div>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
         <div class="col">
-          <div class="box">
-            <p class="title">Primera Ronda</p>
+          <div class="box middle">
+            <p class="title">Ronda de Campeonato</p>
+            <div class="fando-card top-1">
+              <div class="fando-card-header">FINALES</div>
+              <div class="fando-card-body">
+                <div>
+                  <div class="team type-1">
+                    <div class="team-color blue"></div>
+                    <p class="team-name">Equipo 1</p>
+                  </div>
+                  <div class="vs">
+                    vs
+                  </div>
+                  <div class="team type-1">
+                    <div class="team-color green"></div>
+                    <p class="team-name">Equipo 2</p>
+                  </div>
+                </div>
+              </div>
+              <div class="fando-card-footer">
+                Miami, Florida
+                <b>Septiembre 00 - 00</b>
+              </div>
+            </div>
             <div class="fando-card">
+              <div class="fando-card-header">SEMIFINALES</div>
+              <div class="fando-card-body">
+                
+              </div>
+              <div class="fando-card-footer">
+                Miami, Florida
+                <b>Septiembre 00 - 00</b>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="box right-2">
+            <p class="title">Segunda Ronda</p>
+            <div class="fando-card top-1">
+              <div class="fando-card-header">Cuartos de Final 2</div>
+              <div class="fando-card-body">
+                <div class="team type-1">
+                  <div class="team-color red"></div>
+                  <p class="team-name">Equipo 1</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color blue"></div>
+                  <p class="team-name">Equipo 2</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color yellow"></div>
+                  <p class="team-name">Equipo 3</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color green"></div>
+                  <p class="team-name">Equipo 4</p>
+                </div>
+              </div>
+              <div class="fando-card-footer">
+                Miami, Florida
+                <b>Septiembre 00 - 00</b>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="box right">
+            <p class="title">Primera Ronda</p>
+            <div class="fando-card right-1">
               <div class="fando-card-header">Pool A</div>
               <div class="fando-card-body">
                 <div class="team type-1">
