--- a/index.html
+++ b/index.html
@@ -129,10 +129,35 @@
                 <b>Septiembre 00 - 00</b>
               </div>
             </div>
-            <div class="fando-card">
+            <div class="fando-card top-2">
               <div class="fando-card-header">SEMIFINALES</div>
               <div class="fando-card-body">
-                
+                <div>
+                  <div class="team type-1">
+                    <div class="team-color blue"></div>
+                    <p class="team-name">Equipo 1</p>
+                  </div>
+                  <div class="vs">
+                    vs
+                  </div>
+                  <div class="team type-1">
+                    <div class="team-color red"></div>
+                    <p class="team-name">Equipo 2</p>
+                  </div>
+                </div>
+                <div>
+                  <div class="team type-1">
+                    <div class="team-color yellow"></div>
+                    <p class="team-name">Equipo 1</p>
+                  </div>
+                  <div class="vs">
+                    vs
+                  </div>
+                  <div class="team type-1">
+                    <div class="team-color green"></div>
+                    <p class="team-name">Equipo 2</p>
+                  </div>
+                </div>
               </div>
               <div class="fando-card-footer">
                 Miami, Florida
