--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
               <div class="fando-card-header">Pool A</div>
               <div class="fando-card-body">
                 <div class="team type-1">
-                  <div class="team-color red"></div>
+                  <div class="team-color red">
+                    <img src="https://raw.githubusercontent.com/RainierMallol/country-flags/main/svg/nl.svg" alt="">
+                  </div>
                   <p class="team-name">Equipo 1</p>
                 </div>
                 <div class="team type-1">
@@ -80,6 +82,9 @@
             <div class="fando-card top-1">
               <div class="fando-card-header">Cuartos de Final 1</div>
               <div class="fando-card-body">
+                <div class="team type-1 separator">
+                  <b>Juego 1</b> - Marzo 15
+                </div>
                 <div class="team type-1">
                   <div class="team-color red"></div>
                   <p class="team-name">POOL A (winner)</p>
@@ -87,6 +92,9 @@
                 <div class="team type-1">
                   <div class="team-color blue"></div>
                   <p class="team-name">POOL A (runner up)</p>
+                </div>
+                <div class="team type-1 separator">
+                  <b>Juego 2</b> - Marzo 16
                 </div>
                 <div class="team type-1">
                   <div class="team-color yellow"></div>
@@ -107,21 +115,30 @@
         <div class="col">
           <div class="box middle">
             <p class="title">Ronda de Campeonato</p>
-            <div class="fando-card top-1">
-              <div class="fando-card-header">FINALES</div>
+            <div class="fando-card top-2">
+              <div class="fando-card-header">SEMIFINALES</div>
               <div class="fando-card-body">
-                <div>
-                  <div class="team type-1">
-                    <div class="team-color blue"></div>
-                    <p class="team-name">Equipo 1</p>
-                  </div>
-                  <div class="vs">
-                    vs
-                  </div>
-                  <div class="team type-1">
-                    <div class="team-color green"></div>
-                    <p class="team-name">Equipo 2</p>
-                  </div>
+                <div class="team type-1 separator">
+                  <b>Juego 1</b> - Marzo 15
+                </div>
+                <div class="team type-1">
+                  <div class="team-color red"></div>
+                  <p class="team-name">POOL A (winner)</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color blue"></div>
+                  <p class="team-name">POOL A (runner up)</p>
+                </div>
+                <div class="team type-1 separator">
+                  <b>Juego 2</b> - Marzo 16
+                </div>
+                <div class="team type-1">
+                  <div class="team-color yellow"></div>
+                  <p class="team-name">POOL B (winner)</p>
+                </div>
+                <div class="team type-1">
+                  <div class="team-color green"></div>
+                  <p class="team-name">POOL B (runner up)</p>
                 </div>
               </div>
               <div class="fando-card-footer">
@@ -129,34 +146,16 @@
                 <b>Septiembre 00 - 00</b>
               </div>
             </div>
-            <div class="fando-card top-2">
-              <div class="fando-card-header">SEMIFINALES</div>
+            <div class="fando-card top-1">
+              <div class="fando-card-header">FINALES</div>
               <div class="fando-card-body">
-                <div>
-                  <div class="team type-1">
-                    <div class="team-color blue"></div>
-                    <p class="team-name">Equipo 1</p>
-                  </div>
-                  <div class="vs">
-                    vs
-                  </div>
-                  <div class="team type-1">
-                    <div class="team-color red"></div>
-                    <p class="team-name">Equipo 2</p>
-                  </div>
+                <div class="team type-1">
+                  <div class="team-color red"></div>
+                  <p class="team-name">Equipo 1</p>
                 </div>
-                <div>
-                  <div class="team type-1">
-                    <div class="team-color yellow"></div>
-                    <p class="team-name">Equipo 1</p>
-                  </div>
-                  <div class="vs">
-                    vs
-                  </div>
-                  <div class="team type-1">
-                    <div class="team-color green"></div>
-                    <p class="team-name">Equipo 2</p>
-                  </div>
+                <div class="team type-1">
+                  <div class="team-color blue"></div>
+                  <p class="team-name">Equipo 2</p>
                 </div>
               </div>
               <div class="fando-card-footer">
@@ -172,6 +171,9 @@
             <div class="fando-card top-1">
               <div class="fando-card-header">Cuartos de Final 2</div>
               <div class="fando-card-body">
+                <div class="team type-1 separator">
+                  <b>Juego 1</b> - Marzo 15
+                </div>
                 <div class="team type-1">
                   <div class="team-color red"></div>
                   <p class="team-name">Equipo 1</p>
@@ -179,6 +181,9 @@
                 <div class="team type-1">
                   <div class="team-color blue"></div>
                   <p class="team-name">Equipo 2</p>
+                </div>
+                <div class="team type-1 separator">
+                  <b>Juego 1</b> - Marzo 15
                 </div>
                 <div class="team type-1">
                   <div class="team-color yellow"></div>
