--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script>
+      const globalMonth = [
+        "Enero",
+        "Febrero",
+        "Marzo",
+        "Abril",
+        "Mayo",
+        "Junio",
+        "Julio",
+        "Agosto",
+        "Septiembre",
+        "Octubre",
+        "Noviembre",
+        "Dicimre",
+      ];
+    </script>
   </head>
   <body>
     <div class="container teams-map">
@@ -115,13 +131,7 @@
         <div class="col">
           <div class="box left-2">
             <p class="title">Segunda Ronda</p>
-            <div class="fando-card top-1" id="left-level-2-1"></div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="box middle">
-            <p class="title">Ronda de Campeonato</p>
-            <div class="fando-card top-2" id="left-level-3-1">
+            <div class="fando-card top-1" id="left-level-2-1">
               <script>
                 $(document).ready(function () {
                   $.getJSON("TuSeleccion.json", function (data) {
@@ -129,11 +139,23 @@
                     $.each(data, function (key, value) {
                       team += '<div class="fando-card-header">';
                       for (let i = 0; i < 1; i++) {
-                        const roundLevel = value.rounds[2];
+                        const roundLevel = value.rounds[1];
                         for (let j = 0; j < 1; j++) {
                           const groupLavel = roundLevel.groups[0];
                           team += groupLavel.GroupName;
                           team += '</div><div class="fando-card-body">';
+                          team +=
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[0].SectionName +
+                            "</b> - ";
+                            var date1 = new Date(
+                            groupLavel.sections[0].GameDate
+                          );
+                          team +=
+                            globalMonth[date1.getMonth()] +
+                            " " +
+                            date1.getDate();
+                          team += "</div>";
                           for (
                             let k = 0;
                             k < groupLavel.sections[0].teamsOrdering.length;
@@ -152,14 +174,127 @@
                             team += "</div>";
                           }
                           team +=
-                            '</div><div class="fando-card-footer">' +
-                            groupLavel.TournamentVenue;
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[1].SectionName +
+                            "</b> - ";
+                            var date2 = new Date(
+                            groupLavel.sections[1].GameDate
+                          );
                           team +=
-                            "<b>" +
-                            groupLavel.StartDate +
-                            " - " +
-                            groupLavel.EndDate;
-                          team += "</b></div>";
+                            globalMonth[date2.getMonth()] +
+                            " " +
+                            date2.getDate();
+                          team += "</div>";
+                          for (
+                            let k = 0;
+                            k < groupLavel.sections[1].teamsOrdering.length;
+                            k++
+                          ) {
+                            const teamsOrderingLevel =
+                              groupLavel.sections[1].teamsOrdering[k];
+                            team +=
+                              '<div class="team type-1"><div class="team-color red"><img src="';
+                            team += teamsOrderingLevel.team[0].TeamLogo;
+                            team += '" alt=""></div>';
+                            team +=
+                              '<p class="team-name">' +
+                              teamsOrderingLevel.team[0].TeamName;
+                            +"</p>";
+                            team += "</div>";
+                          }
+                          team +=
+                            '</div><div class="fando-card-footer"><b>' +
+                            groupLavel.TournamentVenue +
+                            "</b>";
+                        }
+                      }
+                      team += "</div>";
+                    });
+                    $("#left-level-2-1").append(team);
+                  });
+                });
+              </script>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="box middle">
+            <p class="title">Ronda de Campeonato</p>
+            <div class="fando-card top-2" id="left-level-3-1">
+              <script>
+                $(document).ready(function () {
+                  $.getJSON("TuSeleccion.json", function (data) {
+                    let team = "";
+                    $.each(data, function (key, value) {
+                      team += '<div class="fando-card-header">';
+                      for (let i = 0; i < 1; i++) {
+                        const roundLevel = value.rounds[2];
+                        for (let j = 0; j < 1; j++) {
+                          const groupLavel = roundLevel.groups[0];
+                          team += groupLavel.GroupName;
+                          team += '</div><div class="fando-card-body">';
+                          team +=
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[0].SectionName +
+                            "</b> - ";
+                          var semiFinalDate1 = new Date(
+                            groupLavel.sections[0].GameDate
+                          );
+                          team +=
+                            globalMonth[semiFinalDate1.getMonth()] +
+                            " " +
+                            semiFinalDate1.getDate();
+                          team += "</div>";
+                          for (
+                            let k = 0;
+                            k < groupLavel.sections[0].teamsOrdering.length;
+                            k++
+                          ) {
+                            const teamsOrderingLevel =
+                              groupLavel.sections[0].teamsOrdering[k];
+                            team +=
+                              '<div class="team type-1"><div class="team-color red"><img src="';
+                            team += teamsOrderingLevel.team[0].TeamLogo;
+                            team += '" alt=""></div>';
+                            team +=
+                              '<p class="team-name">' +
+                              teamsOrderingLevel.team[0].TeamName;
+                            +"</p>";
+                            team += "</div>";
+                          }
+                          team +=
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[1].SectionName +
+                            "</b> - ";
+                          var semiFinalDate2 = new Date(
+                            groupLavel.sections[1].GameDate
+                          );
+                          team +=
+                            globalMonth[semiFinalDate2.getMonth()] +
+                            " " +
+                            semiFinalDate2.getDate();
+                          team += "</div>";
+                          for (
+                            let k = 0;
+                            k < groupLavel.sections[1].teamsOrdering.length;
+                            k++
+                          ) {
+                            const teamsOrderingLevel =
+                              groupLavel.sections[1].teamsOrdering[k];
+                            team +=
+                              '<div class="team type-1"><div class="team-color red"><img src="';
+                            team += teamsOrderingLevel.team[0].TeamLogo;
+                            team += '" alt=""></div>';
+                            team +=
+                              '<p class="team-name">' +
+                              teamsOrderingLevel.team[0].TeamName;
+                            +"</p>";
+                            team += "</div>";
+                          }
+                          team +=
+                            '</div><div class="fando-card-footer"><b>' +
+                            groupLavel.TournamentVenue +
+                            "</b>";
                         }
                       }
                       team += "</div>";
@@ -222,7 +357,86 @@
         <div class="col">
           <div class="box right-2">
             <p class="title">Segunda Ronda</p>
-            <div class="fando-card top-1"></div>
+            <div class="fando-card top-1" id="left-level-4-1">
+              <script>
+                $(document).ready(function () {
+                  $.getJSON("TuSeleccion.json", function (data) {
+                    let team = "";
+                    $.each(data, function (key, value) {
+                      team += '<div class="fando-card-header">';
+                      for (let i = 0; i < 1; i++) {
+                        const roundLevel = value.rounds[1];
+                        for (let j = 0; j < 1; j++) {
+                          const groupLavel = roundLevel.groups[1];
+                          team += groupLavel.GroupName;
+                          team += '</div><div class="fando-card-body">';
+                          team +=
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[0].SectionName +
+                            "</b> - ";
+                          var date1 = new Date(groupLavel.sections[0].GameDate);
+                          team +=
+                            globalMonth[date1.getMonth()] +
+                            " " +
+                            date1.getDate();
+                          team += "</div>";
+                          for (
+                            let k = 0;
+                            k < groupLavel.sections[0].teamsOrdering.length;
+                            k++
+                          ) {
+                            const teamsOrderingLevel =
+                              groupLavel.sections[0].teamsOrdering[k];
+                            team +=
+                              '<div class="team type-1"><div class="team-color red"><img src="';
+                            team += teamsOrderingLevel.team[0].TeamLogo;
+                            team += '" alt=""></div>';
+                            team +=
+                              '<p class="team-name">' +
+                              teamsOrderingLevel.team[0].TeamName;
+                            +"</p>";
+                            team += "</div>";
+                          }
+                          team +=
+                            '<div class="team type-1 separator"><b>' +
+                            groupLavel.sections[1].SectionName +
+                            "</b> - ";
+                          var date2 = new Date(groupLavel.sections[1].GameDate);
+                          team +=
+                            globalMonth[date2.getMonth()] +
+                            " " +
+                            date2.getDate();
+                          team += "</div>";
+                          for (
+                            let k = 0;
+                            k < groupLavel.sections[1].teamsOrdering.length;
+                            k++
+                          ) {
+                            const teamsOrderingLevel =
+                              groupLavel.sections[1].teamsOrdering[k];
+                            team +=
+                              '<div class="team type-1"><div class="team-color red"><img src="';
+                            team += teamsOrderingLevel.team[0].TeamLogo;
+                            team += '" alt=""></div>';
+                            team +=
+                              '<p class="team-name">' +
+                              teamsOrderingLevel.team[0].TeamName;
+                            +"</p>";
+                            team += "</div>";
+                          }
+                          team +=
+                            '</div><div class="fando-card-footer"><b>' +
+                            groupLavel.TournamentVenue +
+                            "</b>";
+                        }
+                      }
+                      team += "</div>";
+                    });
+                    $("#left-level-4-1").append(team);
+                  });
+                });
+              </script>
+            </div>
           </div>
         </div>
         <div class="col">
